# tdfpy

./: .gitignore  404.html  CHANGELOG.md  CHANGLOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  benchmark_parallel.py  index.html  junit.xml  justfile  mkdocs.yml  objects.inv  overhead.py  plan.md  print_tables.py  pyproject.toml  test_spectra.py
.github/workflows/: docs.yml  python-package.yml  python-publish.yml
api/centroiding/: index.html
api/frames/: index.html
api/lookup/: index.html
api/low-level/: index.html
api/metadata/: index.html
api/precursor/: index.html
api/readers/: index.html
api/windows/: index.html
benchmark/: benchmark_merge_peaks.py  profile_centroiding.py
docs/: getting-started.md  index.md
docs/api/: centroiding.md  elems.md  frames.md  lookup.md  low-level.md  metadata.md  precursor.md  reader.md  readers.md  windows.md
getting-started/: index.html
search/: search_index.json
src/rust/: README.md  lib.rs
src/tdfpy/: __init__.py  centroiding.py  constants.py  elems.py  lookup.py  main.py  noise.py  pandas_tdf.py  reader.py  spectra.py  tdf.py  timsdata.py
tests/: test_centroiding_utils.py  test_constants.py  test_dda.py  test_docs.py  test_elems.py  test_metadata.py  test_noise.py  test_pandas_tdf.py  test_spectra.py
