[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tdfpy"
dynamic = ["version"]
description = "Python package for parsing Bruker timsTOF data with centroiding and noise filtering"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
dependencies = [
    "numpy",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["bruker", "timstof", "mass-spectrometry", "proteomics", "tdf"]

[tool.maturin]
python-source = "src"
module-name = "tdfpy._tdfpy_rust"
features = ["pyo3/extension-module"]
include = ["src/tdfpy/libtimsdata.so"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ty>=0.0.9",
    "maturin>=1.0",
    "ruff>=0.14.3",
    "pyupgrade>=3.21.0",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "pytest-cov>=6.0.0",
]
