[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdfpy"
dynamic = ["version"]
description = "Python package for parsing Bruker timsTOF data with centroiding and noise filtering"
authors = [
    {name = "Patrick Garrett", email = "pgarrett@scripps.edu"},
]
dependencies = [
    "numpy",
    "pandas",
    "numba>=0.59",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["bruker", "timstof", "mass-spectrometry", "proteomics", "tdf"]

[tool.hatch.version]
path = "src/tdfpy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tdfpy"]
artifacts = ["src/tdfpy/libtimsdata.so"]

[dependency-groups]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "pytest>=7.0",
    "pytest-examples>=0.0.14",
    "ty>=0.0.9",
    "ruff>=0.14.3",
    "pyupgrade>=3.21.0",
    "pandas>=2.3.3",
    "numpy>=2.3.4",
    "pytest-cov>=6.0.0",
]
